--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,13 @@
     <script src="javaScript.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <canvas id="canvas1"></canvas>
+    <div id="controls">
+        <button id="randomizeButton">Random</button>
+    </div>
 </body>
+
 </html>
